# cvrp-decomposition

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md
data/test-set/: X-n670-k130.vrp
data/validation-set/: X-p581.vrp  X-p582.vrp  X-p583.vrp  X-p584.vrp  X-p585.vrp  X-p586.vrp  X-p587.vrp  X-p588.vrp  X-p589.vrp  X-p590.vrp  X-p591.vrp  X-p592.vrp  X-p593.vrp  X-p594.vrp  X-p595.vrp  X-p596.vrp  X-p597.vrp  X-p598.vrp  X-p599.vrp  X-p600.vrp
src/alns/: ALNS_SubProblem_Params.txt
src/alns/PALNS/: PALNS.cpp  PALNS.h  PALNSAcceptanceCriterion.h  PALNSDecompositionMethod.cpp  PALNSDecompositionMethod.h  PALNSHelpers.h  PALNSParameters.cpp  PALNSParameters.h  SubProblem.cpp  SubProblem.h
src/alns/PALNS-CVRP/: ArcCostTracker.cpp  ArcCostTracker.h  CVRPInstance.cpp  CVRPInstance.h  CVRPSolution.cpp  CVRPSolution.h  CVRPUtils.h  DestroyMethods.cpp  DestroyMethods.h  GreedySeqAlg.cpp  GreedySeqAlg.h  IncrementalTSP.h  InsertionCache.cpp  InsertionCache.h  PALNS-CVRP.cpp  PALNS-CVRP.h  PetalAlg.h  Regret2Alg.cpp  Regret2Alg.h  RepairMethods.cpp  RepairMethods.h  Route.cpp  Route.h  SeedAlg.cpp  SeedAlg.h  SeqInsertionCache.cpp  SeqInsertionCache.h  SeqRegret2Alg.cpp  SeqRegret2Alg.h  main.cpp
src/alns/PALNS/AcceptanceCriteria/: RecordDeviation.cpp  RecordDeviation.h
src/alns/PALNS/DecompositionMethods/: ArcBasedDecomposition.cpp  ArcBasedDecomposition.h  RouteSequenceDecomposition.cpp  RouteSequenceDecomposition.h
src/alns/PALNS/DecompositionMethods/ArcBased/: ArcHistoryDecomposition.cpp  ArcHistoryDecomposition.h  CostArcDecomposition.cpp  CostArcDecomposition.h  CostPathDecomposition.cpp  CostPathDecomposition.h  PathHistoryDecomposition.cpp  PathHistoryDecomposition.h  RandomArcDecomposition.cpp  RandomArcDecomposition.h  RandomPathDecomposition.cpp  RandomPathDecomposition.h
src/alns/PALNS/DecompositionMethods/RouteSequence/: BarycentreClusteringDecomposition.cpp  BarycentreClusteringDecomposition.h  BarycentreQuadrantDecomposition.cpp  BarycentreQuadrantDecomposition.h  BarycentreSwipeDecomposition.cpp  BarycentreSwipeDecomposition.h  RandomRouteDecomposition.cpp  RandomRouteDecomposition.h  RouteHistoryDecomposition.cpp  RouteHistoryDecomposition.h
src/alns/SRP-Utils/: ArgParser.cpp  ArgParser.h  Coordinate.h  GraphObjects.cpp  GraphObjects.h  HashNumberGenerator.cpp  HashNumberGenerator.h  LimIntSet.h  Matrix.h  NSMatrix.h  ParFileParser.cpp  ParFileParser.h  StatUtils.h  Utils.cpp  Utils.h  VectorUtils.cpp  VectorUtils.h
src/hgs-TV/: CommandLineParser.cpp  CommandLineParser.h  DecompositionMethod.cpp  DecompositionMethod.h  Genetic.cpp  Genetic.h  Individual.cpp  Individual.h  LocalSearch.cpp  LocalSearch.h  Params.cpp  Params.h  Population.cpp  Population.h  SolverStatus.h  Split.cpp  Split.h  SubProblem.cpp  SubProblem.h  UchoaVehicles.h  main.cpp
src/hgs-TV/Decomposition/: ArcBasedDecomposition.cpp  ArcBasedDecomposition.h  RouteSequenceDecomposition.cpp  RouteSequenceDecomposition.h
src/hgs-TV/Decomposition/ArcBased/: ArcHistoryDecomposition.cpp  ArcHistoryDecomposition.h  CostArcDecomposition.cpp  CostArcDecomposition.h  CostPathDecomposition.cpp  CostPathDecomposition.h  PathHistoryDecomposition.cpp  PathHistoryDecomposition.h  RandomArcDecomposition.cpp  RandomArcDecomposition.h  RandomPathDecomposition.cpp  RandomPathDecomposition.h
src/hgs-TV/Decomposition/ClusteringUtils/: Clustering.h  KMeans.h  KMedoids.h
src/hgs-TV/Decomposition/RouteSequence/: BarycentreClusteringDecomposition.cpp  BarycentreClusteringDecomposition.h  BarycentreQuadrantDecomposition.cpp  BarycentreQuadrantDecomposition.h  BarycentreSwipeDecomposition.cpp  BarycentreSwipeDecomposition.h  RandomRouteDecomposition.cpp  RandomRouteDecomposition.h  RouteHistoryDecomposition.cpp  RouteHistoryDecomposition.h
